--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### TorrentPier ###
 .idea/
 data/avatars/
-data/old_files/
+##data/old_files/
 data/torrent_files/
 internal_data/ajax_html/*.html
 internal_data/atom/
