--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ internal_data/log/
 internal_data/sitemap/*.xml
 internal_data/triggers/
 library/config.local.php
+spam_filter_words.txt
 
 ### Archives ###
 *.log
