--- a/install/php-fpm+nginx/nginx.conf
+++ b/install/php-fpm+nginx/nginx.conf
@@ -115,7 +115,7 @@ http {
 #       }
 
         # cache static files
-        location ~* \.(jpg|jpeg|gif|png|css|js|ico)$ {
+        location ~* \.(jpg|jpeg|gif|png|webp|bmp|css|js|ico)$ {
             root         /var/www;
             access_log   off;
             expires      30d;
