--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ internal_data/sitemap/*.xml
 internal_data/triggers/
 library/config.local.php
 spam_filter_words.txt
+r*-*.php
 
 ### Archives ###
 *.log
